src/test/ui/parser/issues/issue-93282.stderr
error: expected one of `.`, `:`, `;`, `?`, `for`, `loop`, `while`, `{`, `}`, or an operator, found `,`
  --> $DIR/issue-93282.rs:2:9
   |
LL |     f<'a,>
   |         ^ expected one of 10 possible tokens
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |     f::<'a,>
   |      ++

error: aborting due to previous error

