src/test/ui/parser/issues/issue-93282.rs
fn main() {
    f<'a,>
    //~^ ERROR expected
}
